# shopping-agent-with-PAHF-memory-system-by-Langgraph

./: .env.example  .gitignore  .vercelignore  README.md  vercel.json
PAHF/memory/: banks.py
backend/: admin_store.py  auth_deps.py  config.py  main.py  pyproject.toml  vercel_app.py
backend/agents/: graph.py
backend/analytics/: __init__.py  ai_reviewer.py  potential.py  review_store.py  service.py
backend/models/: universal_chat.py
backend/pahf_memory/: service.py
backend/realtime/: __init__.py  api.py  conversation_store.py  escalation.py  events.py  feedback_store.py  runtime.py  service.py
backend/tools/: __init__.py  catalog_store.py  commerce.py  planner.py  schemas.py
database/: schema.sql
docs/: 07-电商售后客服与用户评价分析系统-测试文档.md  08-电商售后客服与用户评价分析系统-测试报告.md  ECOMMERCE_REALTIME_HITL.md  REVIEW_ANALYTICS.md
frontend/: .env.production
frontend/src/: AdminDashboard.tsx  AgentConsole.tsx  Root.tsx  Storefront.tsx  api.ts  main.tsx  shopApi.ts  shopTypes.ts  styles.css
tests/: test_admin_store.py  test_api.py  test_graph.py  test_pahf_memory_api.py  test_realtime_handoff_persistence.py  test_review_analytics.py
