[project]
name = "servicebot-backend"
version = "0.1.0"
description = "FastAPI backend for the e-commerce after-sales and review analytics system"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "openai==1.51.0",
    "loguru==0.7.2",
    "langchain==0.3.1",
    "langgraph==0.2.28",
    "langchain-core==0.3.9",
    "httpx==0.27.2",
    "numpy>=1.24,<3",
    "python-multipart==0.0.12"
]
